[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
encoding_rs = "0.8.29"
html5ever = "0.24.1"
monolith = "2"
flutter_rust_bridge = "1"
url = "2.2.2"

[dependencies.reqwest]
version = "0.11.4"
default-features = false
features = ["default-tls", "blocking", "gzip"]
