[package]
name = "native"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Porteous <danielporteous1@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
anyhow = { version = "1.0.63", features = ["backtrace"] }
encoding_rs = "0.8.31"
html5ever = "0.24.1"
monolith = "2.6.2"
flutter_rust_bridge = "1.42.0"
url = "2.2.2"

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["default-tls", "blocking", "gzip"]

# For Android, we override the openssl dep to force it to use the vendored
# version to avoid this issue: https://stackoverflow.com/questions/72534745/cargo-ndk-fails-due-to-pkg-config-issue
[target.armv7-linux-androideabi.dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }
[target.aarch64-linux-android.dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }
[target.i686-linux-android.dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }
[target.x86_64-linux-android.dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }
